[gd_scene load_steps=16 format=3 uid="uid://tohkah41uh0t"]

[ext_resource type="Script" path="res://scenes/level_objects/bounce_orb/bounce_orb.gd" id="1_j2gdv"]
[ext_resource type="Texture2D" uid="uid://ib1wgs02k81r" path="res://assets/textures/level_objects/bounce_orb.png" id="2_hyxvk"]
[ext_resource type="Texture2D" uid="uid://vfg4pi4e5dyk" path="res://assets/textures/particles/particle_diamond.png" id="3_cugdb"]
[ext_resource type="AudioStream" uid="uid://bebre11h1wo5i" path="res://assets/audio/sfx/orb_jump.ogg" id="4_ucqbc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bgh3a"]
atlas = ExtResource("2_hyxvk")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5ybd"]
atlas = ExtResource("2_hyxvk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5loiq"]
atlas = ExtResource("2_hyxvk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x3cr"]
atlas = ExtResource("2_hyxvk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n46vm"]
atlas = ExtResource("2_hyxvk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xycgk"]
atlas = ExtResource("2_hyxvk")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_njv3d"]
atlas = ExtResource("2_hyxvk")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pngqa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgh3a")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5ybd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5loiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x3cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n46vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xycgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njv3d")
}],
"loop": true,
"name": &"glow",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1j601"]
radius = 8.0

[sub_resource type="Curve" id="Curve_m3i11"]
max_value = 100.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.777273, 13.1868), 58.8061, 58.8061, 0, 0, Vector2(1, 32.967), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_2amip"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.1, 1), 0.0, 0.0, 0, 0, Vector2(0.236364, 0.351648), -1.09181, -1.09181, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[node name="BounceOrb" type="Area2D"]
collision_layer = 8
collision_mask = 8
monitoring = false
script = ExtResource("1_j2gdv")

[node name="BounceOrb" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pngqa")
animation = &"glow"

[node name="RefreshTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1j601")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
color = Color(0.988235, 0.933333, 0.333333, 1)
polygon = PackedVector2Array(0, -8, 8, 0, 0, 8, -8, 0)

[node name="BurstParticles" type="CPUParticles2D" parent="."]
z_index = 3
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.5
texture = ExtResource("3_cugdb")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 100.0
damping_min = 20.0
damping_max = 40.0
damping_curve = SubResource("Curve_m3i11")
angle_max = 720.0
scale_amount_min = 0.2
scale_amount_max = 0.8
scale_amount_curve = SubResource("Curve_2amip")
color = Color(0.917647, 0.866667, 0.482353, 0.796078)

[node name="ReformParticles" type="CPUParticles2D" parent="."]
z_index = 3
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.5
texture = ExtResource("3_cugdb")
emission_shape = 1
emission_sphere_radius = 16.0
spread = 180.0
gravity = Vector2(0, -200)
initial_velocity_min = 10.0
initial_velocity_max = 40.0
damping_min = 20.0
damping_max = 40.0
damping_curve = SubResource("Curve_m3i11")
angle_max = 720.0
scale_amount_min = 0.2
scale_amount_max = 0.8
scale_amount_curve = SubResource("Curve_2amip")
color = Color(0.917647, 0.866667, 0.482353, 0.796078)

[node name="IdleParticles" type="CPUParticles2D" parent="."]
z_index = 3
lifetime = 4.0
lifetime_randomness = 0.5
texture = ExtResource("3_cugdb")
emission_shape = 1
emission_sphere_radius = 16.0
spread = 180.0
gravity = Vector2(0, -100)
initial_velocity_max = 10.0
damping_min = 20.0
damping_max = 40.0
damping_curve = SubResource("Curve_m3i11")
angle_max = 720.0
scale_amount_min = 0.2
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_2amip")
color = Color(0.917647, 0.866667, 0.482353, 0.796078)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ucqbc")

[connection signal="timeout" from="RefreshTimer" to="." method="_on_refresh_timer_timeout"]
